## '$$' means a variable
### *$publishing date$* *[$version$]*: 
### - *$contents$* ^($changing time$)^

2021.1.29 [v1.0.0]: 
- initial release

? [v1.0.1]: 
- bug fixes

2021.2.8 [v1.0.2]: 
- change project license from GGPL-3.0 to AGPL-3.0 (2021.1.29-16:40)
- fix the display name of ALPHA_ELECTRICITY_STORAGE (2021.1.29-17:52)
- fix a repeated recipe in BIOMASS_EXTRACTION_MACHINE (2021.1.30-13:06)
- add MAGNESIUM_GENERATOR and MAGNESIUM_SALT (2021.1.31-21:32)
- add QUANTUM_SOLAR_GENERATOR (2021.2.1-17:47)
- add ENDER_CRYSTAL_GENERATOR and ENDER_CRYSTAL_GENERATOR_BASE and ENDER_CRYSTAL_STABILIZER (2021.2.2-11:09)
- fix a bug in Utils.buildRecipe() (2021.2.2-11:14)
- change ENDER_CRYSTAL_STABILIZER to ENDER_CRYSTAL_GENERATOR_STABILIZER (2021.2.3-11:15)
- fix a machine container title displaying bug in UGImplementor (2021.2.4-20:57)
- change version tag to '1.0.3' (2021.2.4-20:57)
- add ENDER_CRYSTAL_ENHANCER_POTION (2021.2.5-11:56)
- fix plenty of bugs to make ENDER_CRYSTAL_GENERATOR and related machines to work properly (2021.2.5-11:57)
- add particle effect to ENDER_CRYSTAL_GENERATOR (2021.2.5-11:58)
- change version tag to '1.0.2' (2021.2.7-18:46) # I think I wrongly changed the version tag by accident :(
- change the recipe of MAGNESIUM_SALT (2021.2.7-18:53)
- fix a bug in EnderCrystalEnhancerListener (2021.2.7-19:01)

2021.2.8 [v1.0.3]: 
- change the recipe of ENDER_CRYSTAL_GENERATOR (2021.2.8-11:17)
- attach wiki websites in the Slimefun Guide pages of some machines (2021.2.8-11:18)
- change version tag to '1.0.3' (2021.2.8-11:31)

2021.2.10 [v1.0.4]: 
- fix a small bug of redstone control (2021.2.8-19:18)
- add HEAVY_WATER and THERMAL_NEUTRON_REACTOR and some related items (2021.2.9-19:50)
- update version tag to '1.0.4' in 'pom.xml' (2021.2.9-19:50)
- change some recipes and display name and machine fuel information (2021.2.9-20:31)

? [v1.0.5]: 
- set the particle number of ENDER_CRYSTAL_GENERATOR to higher (2021.2.10-21:21)