@@ -64,7 +64,7 @@ public class UGItems {
 	public static ItemStack THERMAL_NEUTRON_REACTOR, THERMAL_NEUTRON_REACTOR_COOLANT_CELL;
 	public static ItemStack NEUTRON_MODERATOR;
 
-	public static ItemStack RAINBOW_BLOCK, REINFORCED_RAINBOW_GLASS;
+	public static ItemStack RAINBOW_ALLOY, REINFORCED_RAINBOW_GLASS;
 	public static ItemStack RAINBOW_REACTOR, RAINBOW_BEAM_RECEIVER;
 
 	static {
@@ -220,16 +220,18 @@ public class UGItems {
 					"eyJ0ZXh0dXJlcyI6eyJTS0lOIjp7InVybCI6Imh0dHA6Ly90ZXh0dXJlcy5taW5lY3JhZnQubmV0L3RleHR1cmUvOGM3NjBjNTc2YTA4OGNiMjljZWIyNmUzMTQzYjdmM2M0NDZjZDZlNWM1MGJmMzMxNTE2NjFjZTYzNmQwNTk3ZSJ9fX0="),
 					"&c热中子核能反应器冷却单元&r");
 
-			RAINBOW_BLOCK = new CustomItem(CustomSkull.getItem(
+			RAINBOW_ALLOY = new CustomItem(CustomSkull.getItem(
 					"eyJ0ZXh0dXJlcyI6eyJTS0lOIjp7InVybCI6Imh0dHA6Ly90ZXh0dXJlcy5taW5lY3JhZnQubmV0L3RleHR1cmUvNDFmZTI3YTEzYzVmYzE3NTE1Y2FlNjk1ODUyNzE2MzI2YjJiNWRmNDdkOGQ2Yjk1YTc4OWFlMzhjYWM3YjEifX19"),
-					"&d彩虹方块&r");
+					"&d彩虹合金&r");
 			REINFORCED_RAINBOW_GLASS = new StainedBlock(BlockColor.MAGENTA, StainedBlockType.GLASS, "&d强化彩虹玻璃");
 
 			RAINBOW_REACTOR = new StainedBlock(BlockColor.PURPLE, StainedBlockType.GLASS, "&d彩虹反应器", "",
 					"&8⇨ &b必须被双层强化彩虹玻璃包裹", "&8⇨ &b必须配备完整的彩虹光束接收器", "", "&4终极发电机", "&8⇨ &e⚡ &732768 J 缓存",
 					"&8⇨ &e⚡ &72048 J/s");
-			RAINBOW_BEAM_RECEIVER = new CustomItem(CustomSkull.getItem(""), "&a彩虹光束接收器&r");
-			
+			RAINBOW_BEAM_RECEIVER = new CustomItem(CustomSkull.getItem(
+					"eyJ0ZXh0dXJlcyI6eyJTS0lOIjp7InVybCI6Imh0dHA6Ly90ZXh0dXJlcy5taW5lY3JhZnQubmV0L3RleHR1cmUvMWRlYmNmZTQxNDNhMTFlNjFkMzkzMTc5OWZiMzIyZTVhYTJhZTczMjc1YzUzYzJjNjc0MTYxNzhkMTQ5ZTE1MiJ9fX0="),
+					"&a彩虹光束接收器&r");
+
 		} catch (Exception e) {
 			e.printStackTrace();
 		}
