@@ -1,0 +1,2 @@
+show-machine-indicator: true
+reinforced-rainbow-glass-twinkling-delay-in-ticks: 40
