@@ -41,3 +41,5 @@
 
 ? [v1.0.5]: 
 - set the particle number of ENDER_CRYSTAL_GENERATOR to higher (2021.2.10-21:21)
+- optimize the codes (2021.2.11-13:51)
+- change the configuration container from 'plugin.yml' to 'config.properties' (2021.2.11-13:51)
